syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.model;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/model/types";

message Model {
  int32 vid = 1; 
  int32 pid = 2; 
  int32 deviceTypeId = 3; 
  string productName = 4; 
  string productLabel = 5; 
  string partNumber = 6; 
  int32 commissioningCustomFlow = 7; 
  string commissioningCustomFlowUrl = 8; 
  uint32 commissioningModeInitialStepsHint = 9; 
  string commissioningModeInitialStepsInstruction = 10; 
  uint32 commissioningModeSecondaryStepsHint = 11; 
  string commissioningModeSecondaryStepsInstruction = 12; 
  string userManualUrl = 13; 
  string supportUrl = 14; 
  string productUrl = 15; 
  string lsfUrl = 16;
  int32 lsfRevision = 17;
  string creator = 18 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint32 schemaVersion = 19;
  int32 enhancedSetupFlowOptions = 20 [(gogoproto.moretags) = "validate:\"omitempty,gte=0,lte=65535\""];
  string enhancedSetupFlowTCUrl = 21 [(gogoproto.moretags) = "validate:\"required_if_bit_0_set=EnhancedSetupFlowOptions,omitempty,url,startswith=https:,max=256\""];
  int32 enhancedSetupFlowTCRevision = 22 [(gogoproto.moretags) = "validate:\"required_if_bit_0_set=EnhancedSetupFlowOptions,gte=0,lte=65535\""];
  string enhancedSetupFlowTCDigest = 23 [(gogoproto.moretags) = "validate:\"required_if_bit_0_set=EnhancedSetupFlowOptions,omitempty,max=128\""];
  uint32 enhancedSetupFlowTCFileSize = 24 [(gogoproto.moretags) = "validate:\"required_with=EnhancedSetupFlowTCUrl\""];;
  string maintenanceUrl = 25 [(gogoproto.moretags) = "validate:\"required_if_bit_0_set=EnhancedSetupFlowOptions,omitempty,url,startswith=https:,max=256\""];
  uint32 discoveryCapabilitiesBitmask = 26 [(gogoproto.moretags) = "validate:\"gte=0,lte=14\""];
  string commissioningFallbackUrl = 27 [(gogoproto.moretags) = "validate:\"omitempty,url,startsnotwith=http:,max=256\""];
  uint32 icdUserActiveModeTriggerHint = 28; 
  string icdUserActiveModeTriggerInstruction = 29; 
  uint32 factoryResetStepsHint = 30; 
  string factoryResetStepsInstruction = 31; 

}

